	PR target/65803 	* config/bfin/bfin.c (hwloop_optimize): Initialize 	JUMP_LABEL for newly created jump.

PR target/65803
	* gcc.c-torture/pr65803.c: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@224866 138bc75d-0d04-0410-961f-82ee72b054a4